# PersonalRAG

./: .env.example  Dockerfile  README.md  app.py  chainlit.md  evaluations.py  main.py  pyproject.toml  requirements.txt
.chainlit/: config.toml
.deepeval/: .deepeval  .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
data/: README - churn.md  README-Log-Realtime-Analysis.md  full_dataset.json  profile.json  profile.txt
public/: custom.css
storage/: default__vector_store.json  docstore.json  index_store.json
